--- a/src/assets/sass/components/_billing.scss
+++ b/src/assets/sass/components/_billing.scss
@@ -1,16 +1,23 @@
 .dashboard__wrapper {
     width: 100%;
     // height: 100vh;
-    display: grid;
-    grid-template-areas:
-        'dashboardNavbar dashboardNavbar dashboardNavbar'
-        'dashboardSidebar dashboardContent dashboardContent'
-        'dashboardSidebar dashboardContent dashboardContent';
+    // display: grid;
+    // grid-template-areas:
+    //     'dashboardNavbar dashboardNavbar dashboardNavbar'
+    //     'dashboardSidebar dashboardContent dashboardContent'
+    //     'dashboardSidebar dashboardContent dashboardContent';
     background: #f7f8fa;
     // overflow: hidden;
 }
 
-#checkbox-blank,#checkbox-blank-customer,#checkbox-blank-entity,#checkbox-blank-po,#checkbox-blank-status,#checkbox-blank-invoice-amount,#checkbox-blank-invoice-issue,#checkbox-blank-due-date{
+#checkbox-blank,
+#checkbox-blank-customer,
+#checkbox-blank-entity,
+#checkbox-blank-po,
+#checkbox-blank-status,
+#checkbox-blank-invoice-amount,
+#checkbox-blank-invoice-issue,
+#checkbox-blank-due-date {
     display: none;
 }
 
@@ -47,6 +54,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        column-gap: 48px;
+        row-gap: 16px;
 
         .logo {
             width: 106px;
@@ -63,6 +72,12 @@
 
             .right__elementsItem {
                 margin-left: 30px;
+
+                @media only screen and (max-width:1400px) {
+                    form {
+                        width: 300px;
+                    }
+                }
             }
 
             .search__group {
@@ -169,7 +184,7 @@
         margin-bottom: 6px;
         max-width: 100%;
         overflow: hidden;
-        white-space:normal;
+        white-space: normal;
     }
 }
 
@@ -248,7 +263,7 @@
         &:hover {
             background-color: $red !important;
 
-            & > svg {
+            &>svg {
 
                 & path {
                     fill: $white !important;
@@ -320,8 +335,9 @@
 
 .dashboard__content {
     padding: 30px 50px;
-    grid-area: dashboardContent;
+    // grid-area: dashboardContent;
     margin-top: 90px;
+    // display: none !important;
 
     .content__header {
         width: 100%;
@@ -386,21 +402,31 @@
 }
 
 .card-wrapper-1 {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
+    // display: grid;
+    // grid-template-columns: repeat(4, 1fr);
+    // grid-gap: 20px;
     margin: 50px 0px;
+    // arhan
+    // display: none;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    row-gap: 32px;
+    justify-content: center;
+
 
     .active {
-        background:#000000;
+        background: #000000;
     }
 
     .cardType__1 {
+        flex-basis: calc(calc(100% - 60px) / 4);
+        min-width: 284px;
         border: 1px solid #ffffff;
         border-radius: 16px;
         padding: 43px 40px;
 
-        
+
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -441,16 +467,17 @@
             background-image: url('../../../assets/images/card2active.png');
             padding-left: 0;
             padding-right: 0;
-            
-            
+
+
 
 
             & .cardType__inner {
                 display: flex;
                 justify-content: space-between;
-                
+
                 & .cardType__icon {
                     margin-left: 10%;
+
                     & svg {
 
                         & path {
@@ -751,9 +778,32 @@
     align-items: center;
     justify-content: flex-end;
     padding-bottom: 10px;
+    // display: none;
+
+    @media only screen and (max-width: 1600px) {
+        justify-content: center;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        flex-wrap: wrap;
+        row-gap: 20px;
+    }
 
     .action__elementItem {
         margin-left: 30px;
+
+        * {
+            width: max-content;
+        }
+
+        &#date-picker button {
+            display: flex;
+            align-items: center;
+
+            & span.cal {
+                top: unset;
+            }
+        }
     }
 }
 
@@ -910,7 +960,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    
+
 
     .actionButton__item {
         span {
@@ -1006,6 +1056,10 @@
     align-items: center;
     justify-content: flex-end;
 
+    @media only screen and (max-width: 1600px) {
+        justify-content: center;
+    }
+
     ul {
         li {
 
@@ -1048,6 +1102,11 @@
     button.actionButton__item {
         background: transparent;
         border: none;
+    }
+
+    button.download-cdr {
+        background-color: #eee;
+        padding: 14px;
     }
 }
 
@@ -1146,6 +1205,7 @@ form.raise-ticket-input .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
 
     .bd-single-container {
         min-height: 400px;
+
         &:nth-child(2) {
             padding-top: 40px;
         }
@@ -1169,7 +1229,8 @@ form.raise-ticket-input .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
 
 
 // Change logout icon and text color
-[data-testid="LogoutOutlinedIcon"], .logout-text {
+[data-testid="LogoutOutlinedIcon"],
+.logout-text {
     color: #D63548;
     font-size: 14px;
 }
@@ -1183,9 +1244,7 @@ form.raise-ticket-input .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
     color: unset;
 }
 
-.MuiTooltip-popper[role="tooltip"] {
-    
-}
+.MuiTooltip-popper[role="tooltip"] {}
 
 
 // Account details styles 
