--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -133,4 +133,5 @@
 body {
     padding-right: 0 !important;
     overflow: unset !important;
+    overflow-x: hidden !important;
 }
